samples/_failures_safe/1761601786_c15cad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_407d9c42.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_407d9c42.c:128:5: error: expected expression at end of input
  128 |     int found =
      |     ^~~
./samples/SAFE/__tmp_407d9c42.c:128:5: error: expected declaration or statement at end of input
